# SCORE-X

./: .gitignore  CMakeLists.txt  README.md
docs/: REVIVAL_NOTES.md
docs/source/: workedexample.rst
example/smoke/: SCORE.Smoke.uds
scripts/: build_local_hdf5.sh
src/: SCORE_Io_Characterization.cpp  SCORE_Io_HDF5.cpp  SCORE_Kernel.cpp  SCORE_OnTheFlyCharacterization.cpp  SCORE_SolitaryUnitAveraging.cpp
test-x/: minijmak.uds
